--- a/classworkJSofDashgin/assets/SASS/index.scss
+++ b/classworkJSofDashgin/assets/SASS/index.scss
@@ -229,57 +229,91 @@
     }
 }
 header{
-    // height: 500px;
-    .item1{
-        width: 100%;
-        height: 500px;
-        background-size: cover;
-        background-position: center;
-        background-image: url(https://fiorello.qodeinteractive.com/wp-content/uploads/2018/05/h3-slider-background.jpg);
-    }
-    .item2{
-        width: 100%;
-        height: 500px;
-        background-size: cover;
-        background-position: center;
-        background-image: url(https://fiorello.qodeinteractive.com/wp-content/uploads/2018/05/h3-slider-background-2.jpg);
-    }
-    h2{
-        margin-top: 110px;
-        margin-bottom: 20px;
-        margin-left: 8%;
-        font-size: 44px;
-        width: 400px;
-        font-weight: 400;
-        span{
-            color: crimson;
+    // min-height: 100px;
+    // .item1{
+    //     width: 100%;
+    //     height: 500px;
+    //     background-size: cover;
+    //     background-position: center;
+    //     background-image: url(https://fiorello.qodeinteractive.com/wp-content/uploads/2018/05/h3-slider-background.jpg);
+    // }
+    // .item2{
+    //     width: 100%;
+    //     height: 500px;
+    //     background-size: cover;
+    //     background-position: center;
+    //     background-image: url(https://fiorello.qodeinteractive.com/wp-content/uploads/2018/05/h3-slider-background-2.jpg);
+    // }
+    // h2{
+    //     margin-top: 110px;
+    //     margin-bottom: 20px;
+    //     margin-left: 8%;
+    //     font-size: 44px;
+    //     width: 400px;
+    //     font-weight: 400;
+    //     span{
+    //         color: crimson;
+    //     }
+    // }
+    // p{
+    //     width: 400px;
+    //     margin-left: 8%;
+    //     margin-bottom: 5%;
+    //     opacity: 0.5;
+    // }
+    // img{
+    //     // margin-left: 8%;
+    // }
+    // .item3{
+    //     width: 100%;
+    //     height: 500px;
+    //     background-size: cover;
+    //     background-position: center;
+    //     background-image: url(https://fiorello.qodeinteractive.com/wp-content/uploads/2018/05/h3-slider-background-3.jpg);
+    // }
+}
+.line2{
+    width: 100%;
+    height: 700px;
+    z-index: 200;
+    .container{
+        .nav{
+            ul{
+                list-style-type: none;
+                display: flex;
+                li{
+                    padding: 10px;
+                }
+                #filter{
+                    margin-left: 71%;
+                    justify-content: end;
+                }
+            }
         }
-    }
-    p{
-        width: 400px;
-        margin-left: 8%;
-        margin-bottom: 5%;
-        opacity: 0.5;
-    }
-    img{
-        margin-left: 8%;
-    }
-    .item3{
-        width: 100%;
-        height: 500px;
-        background-size: cover;
-        background-position: center;
-        background-image: url(https://fiorello.qodeinteractive.com/wp-content/uploads/2018/05/h3-slider-background-3.jpg);
+        .products{
+            display: flex;
+            flex-wrap: wrap;
+            div{
+                width: 250px;
+                height: 300px;
+                margin-left: 5%;
+                margin-bottom: 5%;
+                background-color: turquoise;
+            }
+        }
     }
 }
 .line3{
     background-color: rgb(238, 238, 238);
     .container{
         width: 100%;
-        height: 600px;
+        height: 650px;
         img{
-            width: 540px;
-            height: 350px;
+            width: 100%;
+            height: 100%;
+        }
+        h2{
+            
         }
         span{
             color: rgb(230, 68, 68);
